JumpScript/tests/baselines/reference/parserMemberAccessor1.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessor1.jump(2,7): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessor1.jump (1 errors) ====
    class C {
      get foo() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value.
      set foo(a) { }
    }